# rock-paper-scissors-game

./: .gitignore  README.md  pyproject.toml
rock_paper_scissors/: cli.py  entity.py  game.py  main.py  players.py  rules.py  ui.py
rpsgame/: __main__.py  cli.py  entity.py  game.py  players.py  rules.py  ui.py
