[tool.poetry]
name = "rock-paper-scissors-game"
version = "0.1.0"
description = "A CLI implementation of the rock-paper-scissors game in which you play against the computer."
authors = ["Igor Ferreira <iferreira.n01@gmail.com>"]
readme = "README.md"
packages = [{include = "rpsgame"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.11.4"
mypy = "^0.991"

[tool.poetry.scripts]
rpsgame = 'rpsgame.__main__:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
